# squiddio_pi

./: .autotools  .cproject  .gitignore  .project  .travis.yml  CC_Data  CMakeLists.txt  Frontend2.md  README  appveyor.yml  squiddio-plugin.xml.in  travis.yml
.circleci/: config.yml
.github/: FUNDING.yml
buildosx/InstallOSX/: squiddio_pi.pkgproj.in
buildwin/: curl-ca-bundle.crt
ci/: appveyor-upload.sh  bintray.js  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-macos-universal.sh  circleci-build-macos.sh  circleci-build-mingw.sh  circleci-upload.sh  control  control.trusty  control.xenial  docker-build-fedora.sh  docker-build-flatpak.sh  opencpn-fedora.spec  travis-build-debian.sh  travis-build-flatpak.sh  travis-build-osx.sh  travis-build-raspbian-armhf.sh  travis-upload.sh
cmake/: PluginConfigure.cmake  PluginCurl.cmake  PluginInstall.cmake  PluginLocalization.cmake  PluginPackage.cmake  PluginSetup.cmake  old.version.h.save.in  org.opencpn.OpenCPN.Plugin.squiddio.yaml.in  squiddio-plugin.xml.in  version.h.in
cmake/in-files/: cloudsmith-upload.sh.in  version.h.in
flatpak/: .gitignore  Makefile  Makefile.fp  README.md  org.opencpn.OpenCPN.Plugin.squiddio.yaml
github/: FUNDING.yml
manual/: antora.yml  antora.yml.bak  site.yml
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  POTFILES.in.test  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.mo  it.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  (+22 more)
src/: .cproject  .project  Layer.h  NavObjectCollection.cpp  NavObjectCollection.h  ODAPI.h  Poi.cpp  Poi.h  PoiMan.cpp  PoiMan.h  SquiddioPrefsDialog.cpp  SquiddioPrefsDialog.h  chart1.h  icons.cpp  icons.h  logs.cpp  logs.h  ocpn_plugin.h  pugixml.cpp  pugixml.hpp  sJSON.cpp  squiddioKaps.cpp  squiddioPrefsDialogBase.cpp  squiddioPrefsDialogBase.h  squiddioUI.fbp  squiddioUInew.fbp  squiddio_pi.cpp  squiddio_pi.h  squiddio_pi_thread.cpp  squiddio_pi_utils.cpp  squiddio_pi_utils.h  version.h
src/images/: icons.cpp  icons.h
src/images/logimg_new/: icons.cpp  icons.h
src/wxJSON/: jsonreader.cpp  jsonval.cpp
src/wxcurl/: base.cpp
